--- a/index.html
+++ b/index.html
@@ -12,14 +12,26 @@
             </div>
             <div id="controls">
                 <ul>
-                    <li><a href="#" onclick="start()">Start</a></li>
-                    <li><a href="#" onclick="stop()">Stop</a></li>
+                    <li><a id="startButton" href="#" onclick="start()">Start</a></li>
+                    <li><a id="realtime" href="#" onclick="realTime()">Run</a></li>
                     <li><a href="#" onclick="incGen(1)">+1</a></li>
                     <li><a href="#" onclick="incGen(23)">+23</a></li>
                     <li><a href="#" onclick="reset()">Reset</a></li>
-                    <li><input type="number" id="gridWidth" max="50" placeholder="width" value="50"/></li>
-                    <li><input type="number" id="gridHeight" max="50" placeholder="height" value="50"/></li>
-                    <li><a href="#" onclick="start()">Pattern</a></li>
+                    <li>Width: <input type="number" id="gridWidth" max="50" placeholder="width" value="50"/></li>
+                    <li>Height: <input type="number" id="gridHeight" max="50" placeholder="height" value="50"/></li>
+                    <li><a href="#" onclick="toggleSection('pattern-list')">Pattern</a>
+                        <ul id="pattern-list">
+                            <li><a href="#" onclick="patternSelection('point')">Point</a></li>
+                            <li><a href="#" onclick="patternSelection('block')">Block</a></li>
+                            <li><a href="#" onclick="patternSelection('glider')">Glider</a></li>
+                            <li><a href="#" onclick="patternSelection('blinker')">Blinker</a></li>
+                            <li><a href="#" onclick="patternSelection('beacon')">Beacon</a></li>
+                            <li><a href="#" onclick="patternSelection('toad')">Toad</a></li>
+                            <li><a href="#" onclick="patternSelection('pulsar')">Pulsar</a></li>
+                            <li><a href="#" onclick="patternSelection('spaceship')">Spaceship</a></li>
+                            <li><a href="#" onclick="patternSelection('gosper')">Gosper</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div id="board"></div>
