--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                             <li><a href="#" onclick="patternSelection('gosper')">Gosper</a></li>
                         </ul>
                     </li>
+                    <li id="genCounter" style="font-size: 200%; position: fixed; bottom: 0;">Gen: 0</li>
                 </ul>
             </div>
             <div id="board"></div>
